Imagenes de negociacion y fincampaña cambiado

--- a/demo/src/main/resources/templates/finCampanna.html
+++ b/demo/src/main/resources/templates/finCampanna.html
@@ -6,23 +6,10 @@
         <body>
             <div class="main-content">
                 <div class="title"> 
-                    <h1>Propuesta X realizada</h1>
+                    <h1>Propuesta finalizada</h1>
                 </div>
                 <div class="info">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ducimus tempora pariatur nam, cupiditate necessitatibus temporibus quasi commodi unde corrupti. Incidunt corporis placeat id dolorem eligendi? Fuga facere consequatur officia.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ducimus tempora pariatur nam, cupiditate necessitatibus temporibus quasi commodi unde corrupti. Incidunt corporis placeat id dolorem eligendi? Fuga facere consequatur officia.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ducimus tempora pariatur nam, cupiditate necessitatibus temporibus quasi commodi unde corrupti. Incidunt corporis placeat id dolorem eligendi? Fuga facere consequatur officia.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ducimus tempora pariatur nam, cupiditate necessitatibus temporibus quasi commodi unde corrupti. Incidunt corporis placeat id dolorem eligendi? Fuga facere consequatur officia.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ducimus tempora pariatur nam, cupiditate necessitatibus temporibus quasi commodi unde corrupti. Incidunt corporis placeat id dolorem eligendi? Fuga facere consequatur officia.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ducimus tempora pariatur nam, cupiditate necessitatibus temporibus quasi commodi unde corrupti. Incidunt corporis placeat id dolorem eligendi? Fuga facere consequatur officia.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ducimus tempora pariatur nam, cupiditate necessitatibus temporibus quasi commodi unde corrupti. Incidunt corporis placeat id dolorem eligendi? Fuga facere consequatur officia.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ducimus tempora pariatur nam, cupiditate necessitatibus temporibus quasi commodi unde corrupti. Incidunt corporis placeat id dolorem eligendi? Fuga facere consequatur officia.
-
-                </div>
-                <div class="accepted">
-                   <div class="accepted-1">
-                       La empresa ha aceptado¡
-                    </div>
+                    <input type="text" placeholder="Introduzca su valoración" class="valoracion">
                     <div class="ec-stars-wrapper">
                         <a href="#" data-value="1" title="Votar con 1 estrellas">&#9733;</a>
                         <a href="#" data-value="2" title="Votar con 2 estrellas">&#9733;</a>
@@ -30,9 +17,14 @@
                         <a href="#" data-value="4" title="Votar con 4 estrellas">&#9733;</a>
                         <a href="#" data-value="5" title="Votar con 5 estrellas">&#9733;</a>
                     </div>
-                    <div class="accepted-2">
-                        El influencer ha aceptado¡
+                   
+                </div>
+                <div class="accepted">
+                   <div class="accepted-1">
+                       Enviar valoración
                     </div>
+                    
+                   
                 </div>
             </div>
         </body>
