--- a/demo/src/main/resources/templates/busquedaPerfil.html
+++ b/demo/src/main/resources/templates/busquedaPerfil.html
@@ -7,8 +7,9 @@
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Aclonica" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="busquedaPerfil.css" />
+<link rel="stylesheet" href="css/style.css">
 
-<body style="width:100%">
+<body style="width:100%" class="fonts">
 
 	<!-- !PAGE CONTENT! -->
 	<div>
