Style.css added

--- a/demo/src/main/resources/templates/edicion.html
+++ b/demo/src/main/resources/templates/edicion.html
@@ -2,9 +2,10 @@
 
 <head>
     <link rel="stylesheet" href="css/edicion.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="global">
+<body class="general">
     <header id="main_header" class="main_header">
         <div id="header">
             <img href="inicio.html" class="header_img" src="img/back.png">
