--- a/demo/src/main/resources/templates/inicio.html
+++ b/demo/src/main/resources/templates/inicio.html
@@ -2,9 +2,10 @@
 
 <head>
     <link rel="stylesheet" href="css/inicio.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="global">
+<body class="general">
     <header id="main_header" class="main_header">
         <br>
         <h1>Inicio - Influencing</h1>
