--- a/demo/src/main/resources/templates/notificaciones.html
+++ b/demo/src/main/resources/templates/notificaciones.html
@@ -6,14 +6,16 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="css/notificaciones.css" rel="stylesheet" />
+<link rel="stylesheet" href="css/style.css">
 
-<body style="width:100%">
+<body style="width:100%" class="general">
 
   <!-- !PAGE CONTENT! -->
   <div>
 
     <!-- Header -->
-    <header id="searh" style="padding-left: 1%;">
+    <!--<header id="searh" style="padding-left: 1%;">-->
+    <header id="searh"></header>
       <div class="title" style="padding-left: 0!important;">
         <div class="w3-button">
           <div class="w3-padding w3 w3-text-white"><i class="fa fa-arrow-left"></i> VOLVER</div>
