--- a/demo/src/main/resources/static/css/notificaciones.css
+++ b/demo/src/main/resources/static/css/notificaciones.css
@@ -6,7 +6,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 	box-shadow: 0 1px 3px -2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   border-radius: 20px;
   margin: 2%;
-  padding: 1% !important;
+  /*padding: 1% !important;*/
   background-color: #f9f9f9c4;
   border: solid 1pt lightgrey;
 	min-height: 1px;
@@ -19,6 +19,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 .tocho{
   display: flex;
   flex-direction: column;
+  
 }
 
 input[type=text] {
