--- a/demo/src/main/resources/templates/busquedaPerfil.html
+++ b/demo/src/main/resources/templates/busquedaPerfil.html
@@ -7,8 +7,9 @@
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Aclonica" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="busquedaPerfil.css" />
+<link rel="stylesheet" href="css/style.css">
 
-<body style="width:100%">
+<body style="width:100%" class="general">
 
 	<!-- !PAGE CONTENT! -->
 	<div>
@@ -195,19 +196,21 @@
 				</div>
 			</div>
 
-			<!-- Footer -->
-			<footer class="w3-container w3-padding-32 w3-dark-grey">
-				<div class="links" style="text-align:center;">
-					<a href="#" title="home" target="_blank" class="w3-hover-opacity">Influencing</a>
-					- <a href="#" title="terms" target="_blank" class="w3-hover-opacity">Términos y condiciones</a>
-					- <a href="#" title="contact" target="_blank" class="w3-hover-opacity">Contáctanos</a>
-
-				</div>
-			</footer>
-
-
+			
 			<!-- End page content -->
 		</div>
+
+		<!-- Footer -->
+		<footer class="w3-container w3-padding-32 w3-dark-grey">
+			<div class="links" style="text-align:center;">
+				<a href="#" title="home" target="_blank" class="w3-hover-opacity">Influencing</a>
+				- <a href="#" title="terms" target="_blank" class="w3-hover-opacity">Términos y condiciones</a>
+				- <a href="#" title="contact" target="_blank" class="w3-hover-opacity">Contáctanos</a>
+
+			</div>
+		</footer>
+
+
 
 		<script>
 
