--- a/demo/src/main/resources/templates/valoracion.html
+++ b/demo/src/main/resources/templates/valoracion.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="valoracion.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Valoración propuesta</title>
 </head>
 
-<body>
+<body class="general">
     <header>
         <h1>
             Valoración
