--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -6,6 +6,11 @@
     <meta charset="utf-8" />
     <link href="css/administracion.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Aclonica" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="css/fragments.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/w3.css">
 </head>
 
 <body class="general">
@@ -16,23 +21,27 @@
     </header>
     <main>
 
+        
         <div class="principal">
-            <div class="enlaces">
-                <a href="" class="boton">Influencers</a>
-                <a href="" class="boton">Empresas</a>
-                <a href="" class="boton">Propuestas</a>
-                <a href="" class="boton">Denuncias</a>
-            </div>
-            <div class="contenido">
+            <div class = "subheader">
+                <div class="enlaces">
+                    <a href="" class="category">Influencers</a>
+                    <a href="" class="category">Empresas</a>
+                    <a href="" class="category">Propuestas</a>
+                    <a href="" class="category">Denuncias</a>
+                </div>
                 <div class="busqueda">
                     <form>
                         <input type="text" class="textoBusqueda" placeholder="    Nombre de usuario/email">
                         <input type="submit" value="Buscar">
                     </form>
                 </div>
+            </div>
+            <div class="contenido">
+                
                 <div class="recientes">
                     <h3>Búsquedas recientes</h3>
-                    <ul>
+                    <ul class="profilesList">
                         <li>
                             <div class="usuario">
                                 <div class="imagenPerfil">
