--- a/src/main/resources/static/css/administracion.css
+++ b/src/main/resources/static/css/administracion.css
@@ -13,6 +13,10 @@
     padding-right: 1em;
 }
 
+.subheader{
+    display: flex;
+}
+
 .contenido{
     display: flex;
     flex-direction: column;
@@ -20,8 +24,13 @@
 }
 .enlaces {
     display: flex;
-    padding-bottom: 3em;
-    padding-left: 3em;
+    /* padding-bottom: 3em; */
+    /* padding-left: 3em; */
+    margin: auto;
+    margin-top: 2%;
+    /* color: black; */
+    /* width: fit-content; */
+    width: 60%;
 }
 
 .enlaces .boton{
@@ -32,22 +41,33 @@
     padding-left: 3em;
 }
 
-ul{
+.profilesList{
     list-style-type: none;
     display: flex;
     flex-direction: column;
+    width: 50%;
+    background-color: white;
 }
 
 .usuario{
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 1px solid;
+    box-shadow: 0 1px 3px -2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    border-radius: 20px;
+    margin: 2%;
+    padding: 1% !important;
+    background-color: #f9f9f9c4;
+    border: solid 1pt lightgrey;
 }
 
 .recientes{
     display: flex;
     flex-direction: column;
     text-align: center;
+    margin-bottom: 2%;
+    width: 100%;
 }
 
 .imagenPerfil{
@@ -61,22 +81,51 @@ ul{
     text-align: center;
 }
 
-.boton{
+.category{
     font: bold 11px Arial;
     text-decoration: none;
     background-color: #EEEEEE;
-    color: #333333;
     padding: 1em 2em 1em 2em;
+    width: 10%;
+    color: black;
     border-top: 1px solid #CCCCCC;
     border-right: 1px solid #333333;
     border-bottom: 1px solid #333333;
     border-left: 1px solid #CCCCCC;
+    padding: 1% !important;
+    background-color: #f9f9f9c4;
+}
+
+.boton{
+    font: bold 11px Arial;
+    text-decoration: none;
+    /* background-color: #EEEEEE; */
+    color: #333333;
+    background-color: #6ed1dd;
+    /* padding: 1em 2em 1em 2em; */
+    /* border-top: 1px solid #CCCCCC; */
+    /* border-right: 1px solid #333333; */
+    /* border-bottom: 1px solid #333333; */
+    /* border-left: 1px solid #CCCCCC; */
+    width: 90%;
+    box-shadow: 0 1px 3px -2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    border-radius: 20px;
+    margin: 2%;
+    /* padding: 1% !important; */
+    /* background-color: #f9f9f9c4; */
+    border: solid 1pt lightgrey;
+    /* min-height: fit-content; */
+    display: flex;
 }
 
 h3{
     margin-bottom: 0;
 }
 
+.busqueda{
+    width: 40%;
+    margin-top: 2%;
+}
 .textoBusqueda{
     width: 20em;
     margin-left: 5em;
