--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -1,10 +1,15 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="css/inicio.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Aclonica" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">-->
+    <link rel="stylesheet" href="css/inicio.css">
+
 </head>
 
 <!-- Header -->
