--- a/src/main/resources/templates/valoracion.html
+++ b/src/main/resources/templates/valoracion.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="valoracion.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Aclonica" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Valoración propuesta</title>
     <!-- Header -->
     <header>
