--- a/src/main/resources/static/css/administracion.css
+++ b/src/main/resources/static/css/administracion.css
@@ -45,7 +45,7 @@
     list-style-type: none;
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 100%;
     background-color: white;
 }
 
@@ -65,11 +65,15 @@
 .recientes{
     display: flex;
     flex-direction: column;
+ 	align-items: flex-start;
     text-align: center;
     margin-bottom: 2%;
-    width: 100%;
+    width: 30%;
 }
 
+.recientes h3{
+	align-self: center;
+}
 .imagenPerfil{
     padding: 2em 1em 0 0;
 }
