--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,7 +12,7 @@
         </div>
         <br>
         <div class="horizontalBar">
-            <ul>
+            <ul class="ulFragment">
                 <li><a class="active" href="busquedaPerfil"><i class="fa fa-search" aria-hidden="true"></i> Búsqueda de
                         perfiles</a></li>
                 <li><a href="negociacion"><i class="fa fa-comment-o" aria-hidden="true"></i> Chat de Negociación</a>
