--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -33,7 +33,7 @@
                 <div class="busqueda">
                     <form>
                         <input type="text" class="textoBusqueda" placeholder="    Nombre de usuario/email">
-                        <input type="submit" value="Buscar">
+                        <input type="submit" value="Buscar" class="btnEnviar">
                     </form>
                 </div>
             </div>
