--- a/src/main/resources/static/css/fragments.css
+++ b/src/main/resources/static/css/fragments.css
@@ -18,6 +18,7 @@
 	margin: auto;
     list-style-type: none;
     padding: 0;
+	margin: 0em 1em 1em 1em;
     overflow: hidden;
     background-color: #6ed1dd;
     border-radius: 8px;
