--- a/src/main/resources/templates/busquedaPerfil.html
+++ b/src/main/resources/templates/busquedaPerfil.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/busquedaPerfil.css" />
 <link rel="stylesheet" href="css/style.css">
+    <link href="css/fragments.css" rel="stylesheet">
 
 <body style="width:100%" class="general">
 
