--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-
-
+<!--  SDF-->
 <head>
     <meta charset="utf-8" />
     <link href="css/administracion.css" rel="stylesheet">
