--- a/src/main/resources/static/css/propuesta.css
+++ b/src/main/resources/static/css/propuesta.css
@@ -1,6 +1,10 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
 
+h2{
+	padding-top: 1em;
+}
+
 .box {
 	width: 90%;
 	box-shadow: 0 1px 3px -2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -32,6 +36,14 @@ input[type=checkbox] {
   float: right;
 }
 
+input[type=date] {
+  margin: 0 1em 0 1em;
+}
+
+input[type=file] {
+  margin: 0 1em 0 1em;
+}
+
 
 .title{
 	height: 100px;
@@ -45,4 +57,62 @@ input[type=checkbox] {
     margin: 2px;
 	width: fit-content;
     min-width: 50px;
+}
+
+.contenido{
+	display:flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	padding: 0 3em 0 3em;
+}
+
+.texto-propuesta{
+	display:flex;
+	flex-direction: column;
+	align-items: center;
+	width:70%;
+	align-self: center;
+}
+
+.edad-propuesta{
+	display:flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+ #edades{
+	margin: 0 1em 0 1em;
+}
+
+.periodo-propuesta{
+	display:flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.imagen-propuesta{
+	display:flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.tags-propuesta{
+	display:flex;
+	padding: 2em 0 1em 0;
+	justify-content: center;
+	align-items: center;
+}
+
+.btn-publicar{
+	width: 5%;
+	align-self: center;
+}
+
+.boton{
+	border-radius:20px;
+	background-color: #6ed1dd;
+	border-top: 1px solid #CCCCCC;
+	border-right: 1px solid #333333;
+	border-bottom: 1px solid #333333;
+	border-left: 1px solid #CCCCCC;
 }
