--- a/src/main/resources/templates/valoracion.html
+++ b/src/main/resources/templates/valoracion.html
@@ -1,30 +1,27 @@
-<!doctype html lang="es">
-<html>
+<!DOCTYPE html>
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="valoracion.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Aclonica" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/valoracion.css">
+
     <title>Valoración propuesta</title>
     <!-- Header -->
-    <header>
+    
+</head>
+<header>
         <div th:replace="fragments.html :: modalBar(nombrePagina='VALORACION')"></div>
     </header>
-</head>
-
 <body class="general">
-    <header>
-        <h1>
-            Valoración
-        </h1>
-    </header>
+
     <div class="contenedor">
         <section class="contenido-propuesta">
-            <div>
+            <div class="texto-propuesta">
                 <h2>
                     Propuesta X
                 </h2>
@@ -47,15 +44,17 @@
                     in sed incidunt, quidem delectus dolorem ullam tenetur.
                 </p>
             </div>
-            <img src="https://via.placeholder.com/200x300" />
+			<div>
+	            <img src="https://via.placeholder.com/200x300" />
+			</div>
         </section>
         <section class="valoracion">
             <div id="cabecera">
-                <div>
+                
                     <h1>
                         Valoración
                     </h1>
-                </div>
+                
                 <img src="https://via.placeholder.com/100" />
                 <div class="ec-stars-wrapper">
                     <a href="#" data-value="1" title="Votar con 1 estrellas">&#9733;</a>
