Revert "pull master > DevLaura"

--- a/src/main/resources/templates/busquedaPerfil.html
+++ b/src/main/resources/templates/busquedaPerfil.html
@@ -8,7 +8,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/busquedaPerfil.css" />
 <link rel="stylesheet" href="css/style.css">
-    <link href="css/fragments.css" rel="stylesheet">
 
 <body style="width:100%" class="general">
 
@@ -24,13 +23,13 @@
 		<!-- First Photo Grid-->
 		<div class="w3-row-padding">
 
-			<div th:each="usuario: ${usuarios}" class="w3-third w3-container w3-margin-bottom box">
+			<div class="w3-third w3-container w3-margin-bottom box">
 				<div class="w3-container w3-white info">
 					<div class="imagen">
 						<img src="https://www.pngkey.com/png/full/230-2301779_best-classified-apps-default-user-profile.png"
 							style="width:80%" class="w3-hover-opacity">
 					</div>
-					<p><b th:text="${usuario.nombre}"></b></p>
+					<p><b>User Name</b></p>
 					<div class="score">
 						<i class="fa fa-star w3-margin-right"></i>
 						<i class="fa fa-star w3-margin-right"></i>
@@ -44,7 +43,114 @@
 					<p>Praesent tincidunt sed tellus ut rutrum.</p>
 				</div>
 			</div>
-		</div>
+
+			<div class="w3-third w3-container w3-margin-bottom box">
+				<div class="w3-container w3-white info">
+					<div class="imagen">
+						<img src="https://www.pngkey.com/png/full/230-2301779_best-classified-apps-default-user-profile.png"
+							style="width:80%" class="w3-hover-opacity">
+					</div>
+					<p><b>User Name</b></p>
+					<div class="score">
+						<i class="fa fa-star w3-margin-right"></i>
+						<i class="fa fa-star w3-margin-right"></i>
+					</div>
+					<div>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+					</div>
+					<p>Praesent tincidunt sed tellus ut rutrum.</p>
+				</div>
+			</div>
+			<div class="w3-third w3-container w3-margin-bottom box">
+				<div class="w3-container w3-white info">
+					<div class="imagen">
+						<img src="https://www.pngkey.com/png/full/230-2301779_best-classified-apps-default-user-profile.png"
+							style="width:80%" class="w3-hover-opacity">
+					</div>
+					<p><b>User Name</b></p>
+					<div class="score">
+						<i class="fa fa-star w3-margin-right"></i>
+						<i class="fa fa-star w3-margin-right"></i>
+						<i class="fa fa-star w3-margin-right"></i>
+					</div>
+					<div>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+					</div>
+					<p>Praesent tincidunt sed tellus ut rutrum.</p>
+				</div>
+			</div>
+
+
+			<!-- Second Photo Grid-->
+			<div class="w3-third w3-container w3-margin-bottom box">
+				<div class="w3-container w3-white info">
+					<div class="imagen">
+						<img src="https://www.pngkey.com/png/full/230-2301779_best-classified-apps-default-user-profile.png"
+							style="width:80%" class="w3-hover-opacity">
+					</div>
+					<p><b>User Name</b></p>
+					<div class="score">
+						<i class="fa fa-star w3-margin-right"></i>
+						<i class="fa fa-star w3-margin-right"></i>
+						<i class="fa fa-star w3-margin-right"></i>
+						<i class="fa fa-star w3-margin-right"></i>
+					</div>
+					<div>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+					</div>
+					<p>Praesent tincidunt sed tellus ut rutrum.</p>
+				</div>
+			</div>
+			<div class="w3-third w3-container w3-margin-bottom box">
+				<div class="w3-container w3-white info">
+					<div class="imagen">
+						<img src="https://www.pngkey.com/png/full/230-2301779_best-classified-apps-default-user-profile.png"
+							style="width:80%" class="w3-hover-opacity">
+					</div>
+					<p><b>User Name</b></p>
+					<div class="score">
+						<i class="fa fa-star w3-margin-right"></i>
+						<i class="fa fa-star w3-margin-right"></i>
+						<i class="fa fa-star w3-margin-right"></i>
+					</div>
+					<div>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+					</div>
+					<p>Praesent tincidunt sed tellus ut rutrum.</p>
+				</div>
+			</div>
+			<div class="w3-third w3-container w3-margin-bottom box">
+				<div class="w3-container w3-white info">
+					<div class="imagen">
+						<img src="https://www.pngkey.com/png/full/230-2301779_best-classified-apps-default-user-profile.png"
+							style="width:80%" class="w3-hover-opacity">
+					</div>
+					<p><b>User Name</b></p>
+					<div class="score">
+						<i class="fa fa-star w3-margin-right"></i>
+						<i class="fa fa-star w3-margin-right"></i>
+						<i class="fa fa-star w3-margin-right"></i>
+					</div>
+					<div>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+						<button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
+					</div>
+					<p>Praesent tincidunt sed tellus ut rutrum.</p>
+				</div>
+			</div>
 
 
 			<!-- Pagination -->
