--- a/src/main/resources/static/css/valoracion.css
+++ b/src/main/resources/static/css/valoracion.css
@@ -1,78 +1,75 @@
-
+*{
+    margin:0px;
+    padding:0px;
+}
 
 header{
-    background-color:#6ed1dd;
+    background-color:#b9dfe0;
     text-align: center;
     top:0;
     padding:10px;
 }
 
 .contenedor{
-	background-color: #f9f9f9c4 !important;
+    background-color: blueviolet;
     min-height: 100vh;
     display:flex;
-	flex-direction: column;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
     background-color: #D7DBDD 
 }
 
 section{
-	margin: 1% !important;
-	width: 70%;
+    width: 70%;
+    display: flex;
+    flex-wrap: nowrap;
+    border: 1px solid black;
 }
-
 
 .contenido-propuesta{
+    background-color: #839192;
+    overflow-y: scroll;
+    padding: 10px;
     display:flex;
-	justify-content: center;
-	align-items: center;
-	box-shadow: 0 1px 3px -2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-	border-radius: 20px;
-	padding: 1% !important;
-	background-color: #f9f9f9c4;
-	border: solid 1pt lightgrey;
+    height:250px;
 }
 
+.contenido-propuesta div{
+    width: 70%;
+    padding: 15px;
+    padding-top: 0;
+    height: 50px;
+}
 
 .contenido-propuesta img{
-    width: auto;
-}
-
-.comentario{
-	display:flex;
-	align-items:center;
-}
-.texto-propuesta{
-	display:flex;
-	flex-direction: column;
-	align-items: center;
-	padding: 0 2em 02em;
-}
-
-.texto-propuesta h2{
-	padding-bottom: 1em;
+    width: 30%;
 }
 
 .valoracion{
+    background-color:#839192;
+    padding: 10px;
+    margin-bottom: 20px;
+    height:230px;
     display:flex;
-	box-shadow: 0 1px 3px -2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-	justify-content: space-between;
-	border-radius: 20px;
-	padding: 1% !important;
-	background-color: #f9f9f9c4;
-	border: solid 1pt lightgrey;
+    flex-direction:column;
 }
 
 #cabecera{
+    text-align: center;
+    margin-bottom: 10px;
     display:flex;
     flex-direction: column;
-	align-items: center;
-	margin: 0 2em 2em 2em;
+    align-items: center;
 }
 
 #cabecera img{
-      width: 10em;
-	  margin: 1em 0  1em 0;
+   width:10%;
+   padding:2px;
+}
+
+.comentario{
+    overflow-y: scroll;
 }
 
 
@@ -107,9 +104,6 @@ footer{
 
 .ec-stars-wrapper > a:hover ~ a {
 	color: #F1C40F;
-}
-img{
-	border-radius: 20px;
 }
 
 
