--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
-<!--  SDF-->
+
+
 <head>
     <meta charset="utf-8" />
     <link href="css/administracion.css" rel="stylesheet">
@@ -32,7 +33,7 @@
                 <div class="busqueda">
                     <form>
                         <input type="text" class="textoBusqueda" placeholder="    Nombre de usuario/email">
-                        <input type="submit" value="Buscar" class="btnEnviar">
+                        <input type="submit" value="Buscar">
                     </form>
                 </div>
             </div>
