--- a/src/main/resources/templates/negociacion.html
+++ b/src/main/resources/templates/negociacion.html
@@ -4,13 +4,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <link href="css/negociacion.css" rel="stylesheet">    
-	<link href="css/style.css" rel="stylesheet">
+    <link href="css/negociacion.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Aclonica" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="css/fragments.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/w3.css">
 </head>
 
 <body class="general">
@@ -20,6 +19,12 @@
         <div th:replace="fragments.html :: navBar"></div>
     </header>
     <main>
+        <div class="enlaces">
+            <a href="" class="boton">Búsqueda de perfiles</a>
+            <a href="" class="boton">Chat de negociación</a>
+            <a href="" class="boton">Búsqueda de propuestas</a>
+            <a href="" class="boton">Contrataciones</a>
+        </div>
         <div class="contenido">
             <div class="lista">
                 <div class="propuesta">
@@ -60,17 +65,6 @@
                     </div>
                 </div>
                 <p class="mensaje recibido">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
-                    vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt
-                    id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam
-                    nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna.
-
-                </p>
-                <p class="mensaje enviado">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
-                    vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt
-                    id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam
-                    nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna.
-                </p>
-				<p class="mensaje recibido">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
                     vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt
                     id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam
                     nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna.
