--- a/src/main/resources/templates/valoracion.html
+++ b/src/main/resources/templates/valoracion.html
@@ -1,27 +1,30 @@
-<!DOCTYPE html>
-<html lang="es">
+<!doctype html lang="es">
+<html>
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="valoracion.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Aclonica" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/valoracion.css">
-
     <title>Valoración propuesta</title>
     <!-- Header -->
-    
-</head>
-<header>
+    <header>
         <div th:replace="fragments.html :: modalBar(nombrePagina='VALORACION')"></div>
     </header>
-<body class="general">
+</head>
 
+<body class="general">
+    <header>
+        <h1>
+            Valoración
+        </h1>
+    </header>
     <div class="contenedor">
         <section class="contenido-propuesta">
-            <div class="texto-propuesta">
+            <div>
                 <h2>
                     Propuesta X
                 </h2>
@@ -44,17 +47,15 @@
                     in sed incidunt, quidem delectus dolorem ullam tenetur.
                 </p>
             </div>
-			<div>
-	            <img src="https://via.placeholder.com/200x300" />
-			</div>
+            <img src="https://via.placeholder.com/200x300" />
         </section>
         <section class="valoracion">
             <div id="cabecera">
-                
+                <div>
                     <h1>
                         Valoración
                     </h1>
-                
+                </div>
                 <img src="https://via.placeholder.com/100" />
                 <div class="ec-stars-wrapper">
                     <a href="#" data-value="1" title="Votar con 1 estrellas">&#9733;</a>
