--- a/src/main/resources/templates/negociacion.html
+++ b/src/main/resources/templates/negociacion.html
@@ -21,34 +21,16 @@
     </header>
     <main>
         <div class="contenido">
-            <div class="lista">
-                <div class="propuesta">
-                    <a href="">
-                        <img width="50" height="50" src="img/perfilIcon.svg">
-                    </a>
-                    <span> Nombre de la propuesta</span>
-                </div>
-                <div class="propuesta">
-                    <a href="">
-                        <img width="50" height="50" src="img/perfilIcon.svg">
-                    </a>
-                    <span> Nombre de la propuesta</span>
-                </div>
-                <div class="propuesta seleccionada">
-                    <a href="">
-                        <img width="50" height="50" src="img/perfilIcon.svg">
-                    </a>
-                    <span> Zapatillas</span>
-                </div>
-                <div class="propuesta">
-                    <a href="">
-                        <img width="50" height="50" src="img/perfilIcon.svg">
-                    </a>
-                    <span> Nombre de la propuesta</span>
-                </div>
 
-
+            <div class="lista" th:each="propuesta: ${propuestas}">
+                <div class="propuesta">
+                    <a href="">
+                        <img width="50" height="50" src="img/perfilIcon.svg">
+                    </a>
+                    <span th:text="${propuesta.nombre}"> Nombre de la propuesta</span>
+                </div>
             </div>
+
             <div class="chat">
                 <div class="barraChat">
                     <div class="informacionChat">
