--- a/src/main/resources/templates/busquedaPropuesta.html
+++ b/src/main/resources/templates/busquedaPropuesta.html
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Aclonica" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="css/busquedaPropuesta.css" />
-<link rel="stylesheet" href="css/style.css">
-    <link href="css/fragments.css" rel="stylesheet">
-
-
+<head><th:block th:replace="fragments/head :: header"/>
+	<link rel="stylesheet" type="text/css" href="css/busquedaPropuesta.css" />
+</head>
 <body style="width:100%" class="general">
 
 	<!-- !PAGE CONTENT! -->
