--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -35,6 +35,26 @@
                         <input type="submit" value="Buscar" class="btnEnviar">
                     </form>
                 </div>
+				<div class="dropdown">
+					<span class="nombre-dropdown">Nombre administrador</span>
+					<div class="dropdown-content">
+						<div class="dropdown-element">							  
+							<p>Ultimas notificaciones</p>
+							<div class="dropdown-notificaciones">
+							<p>Notificacion</p>
+							<p>Notificacion</p>
+							<p>Notificacion</p>
+							<p>Notificacion</p>
+							<p>Notificacion</p>
+
+							</div>
+							<a href="" class="dropdown-boton"> Ver todas</a>
+						</div>
+						<div class="dropdown-element">
+							<a href="" class="dropdown-boton"> Cerrar sesion</a>
+						</div>
+					</div>
+				</div>
             </div>
             <div class="contenido">
                 
