--- a/src/main/resources/static/css/administracion.css
+++ b/src/main/resources/static/css/administracion.css
@@ -45,6 +45,48 @@
     background-color: white;
 }
 
+.dropdown {
+	display: inline-flex;
+	margin-right: 10%;
+	margin-top: 2%;
+	box-shadow: 0 1px 3px -2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	background-color: #6ed1dd;
+	border-radius: 20px;
+	padding:0 1% 0 1%;
+	text-align: center;
+
+}
+
+
+.nombre-dropdown{
+	white-space: nowrap;
+	padding-top: 1.5%;
+	
+}
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	z-index: 1;
+	box-shadow: 0 1px 3px -2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	border-radius: 20px;
+	margin-top: 1.7%;
+	background-color: #f9f9f9c4;
+	border: solid 1pt lightgrey;
+}
+
+
+.dropdown-element{
+	padding: 3% 0 3% 0;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+
+}
+
+
 .usuario{
     display: flex;
     justify-content: center;
@@ -113,6 +155,14 @@
     /* min-height: fit-content; */
     display: flex;
 }
+
+.dropdown-boton{
+	text-align:center;
+	background-color: #6ed1dd;
+    border-radius: 20px;
+	padding:3% !important;
+}
+
 
 h3{
     margin-bottom: 0;
