Centrado barra de navegacion y titulos de pagina en navBar

--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -16,7 +16,7 @@
 
     <!-- Header -->
     <header>
-        <div th:replace="fragments.html :: navBar"></div>
+        <div th:replace="fragments.html :: navBar(nombrePagina='ADMINISTRACIÓN')"></div>
     </header>
     <main>
 
