--- a/src/main/resources/templates/busquedaPerfil.html
+++ b/src/main/resources/templates/busquedaPerfil.html
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 		<header>
-			<div th:replace="fragments.html :: navBar"></div>
+			<div th:replace="fragments.html :: navBar(nombrePagina='BÚSQUEDA DE PERFILES')"></div>
 			<div th:replace="fragments.html :: tagBar"></div>
 		</header>
 
