--- a/src/main/resources/templates/busquedaPropuesta.html
+++ b/src/main/resources/templates/busquedaPropuesta.html
@@ -10,7 +10,7 @@
 
 		<!-- Header -->
 		<header>
-			<div th:replace="fragments.html :: navBar"></div>
+			<div th:replace="fragments.html :: navBar(nombrePagina='BÚSQUEDA DE PROPUESTAS')"></div>
 			<div th:replace="fragments.html :: tagBar"></div>
 		</header>
 
