--- a/src/main/resources/templates/contrataciones.html
+++ b/src/main/resources/templates/contrataciones.html
@@ -6,13 +6,12 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="css/contrataciones.css" />
 <link rel="stylesheet" href="css/style.css">
-
+<link rel="stylesheet" type="text/css" href="css/contrataciones.css" />
 
 <!-- Header -->
 <header>
-	<div th:replace="fragments.html :: navBar"></div>
+	<div th:replace="fragments.html :: navBar(nombrePagina='CONTRATACIONES')"></div>
 </header>
 
 <body style="width:100%" class="general">
