--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -13,8 +13,9 @@
 
 <!-- Header -->
 <header>
-    <div th:replace="fragments.html :: navBar"></div>
+    <div th:replace="fragments.html :: navBar(nombrePagina='INICIO')"></div>
 </header>
+
 <body class="general">
     <!--  -------------------------Cuerpo de la web----------------------------->
     <div id="global_div" class=>
