--- a/src/main/resources/templates/negociacion.html
+++ b/src/main/resources/templates/negociacion.html
@@ -17,7 +17,7 @@
     
     <!-- Header -->
     <header>
-        <div th:replace="fragments.html :: navBar"></div>
+        <div th:replace="fragments.html :: navBar(nombrePagina='CHAT DE NEGOCIACIÓN')"></div>
     </header>
     <main>
         <div class="contenido">
