--- a/src/main/resources/templates/valoracion.html
+++ b/src/main/resources/templates/valoracion.html
@@ -15,7 +15,7 @@
     
 </head>
 <header>
-        <div th:replace="fragments.html :: modalBar(nombrePagina='VALORACION')"></div>
+        <div th:replace="fragments.html :: modalBar(nombrePagina='VALORACIÓN')"></div>
     </header>
 <body class="general">
 
